feat(library): hoàn thiện không gian nghiên cứu và tài liệu riêng tư
Refs #42